<resources>
    <string name="app_name">KLIKzdaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="klasa_1">Klasa 1</string>
    <string name="klasa_2">Klasa 2</string>
    <string name="klasa_3">Klasa 3</string>
    <string name="klasa_4">Klasa 4</string>
    <string name="klasa_5">Klasa 5</string>
    <string name="klasa_6">Klasa 6</string>
    <string name="klasa_7">Klasa 7</string>
    <string name="klasa_8">Klasa 8</string>
    <string name="zapisane">Zapisane</string>
    <string name="testy">Testy</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>